--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "python"]
-	path = python
-	url = git@github.com:aa362ce/python
+#[submodule "python"]
+#	path = python
+#	url = git@github.com:aa362ce/python
